# FEM-Multiphysics

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
Libraries/: README.md
documentation/: Documentation.docx  Documentation_InputFiles.docx  README.md  boundary.json  parts.json  solver.json
inputs/: boundary.json  parts.json  solver.json  test.json
src/: BForce_Traction.hpp  Boundary_HT.hpp  CMakeLists.txt  DirichletBC.hpp  Element.cpp  Material.cpp  Matrix_Assemble.cpp  Matrix_Assemble.hpp  SolverInputs.hpp  Time_Discretization.cpp  Time_Discretization.hpp  bForce_Traction.cpp  bForce_Traction.hpp  boundaryInputs.cpp  boundaryInputs.hpp  boundary_HT.cpp  boundary_HT.hpp  dirichletBC.cpp  dirichletBC.hpp  material.cpp  material.hpp  neumanBC.cpp  neumanBC.hpp  postProcessingInputs  postProcessingInputs.hpp  readMesh.hpp  structureBoundary.cpp  structureBoundary.hpp
src/element/: CMakeLists.txt  Quadratures.hpp  basisFunction.cpp  basisFunction.hpp  element.cpp  element.hpp  quadratures.cpp  quadratures.hpp
src/material/: CMakeLists.txt  MaterialBase.cpp  MaterialBase.hpp  material.hpp  solid.cpp  solid.hpp  thermal.hpp
src/postProcessing/: CMakeLists.txt  PostProcess.cpp  PostProcess.hpp  postProcess.cpp  postProcess.hpp  postProcessingInputs.cpp  postProcessingInputs.hpp
src/preProcessing/: CMakeLists.txt  readMesh.cpp  readMesh.hpp
src/readJsonInputs/: CMakeLists.txt  boundaryInputs.cpp  partInputs.cpp  partInputs.hpp  solverInputs.cpp  solverInputs.hpp
